Criação do início do projeto e seus styles referentes

--- a/index.html
+++ b/index.html
@@ -1,58 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-
-        body{
-            background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/d9cb1eea-62ee-4ec1-9b90-8d98874b8867/0a258073-65bb-4128-a01b-c8229d79f5c8/BR-pt-20210817-popsignuptwoweeks-perspective_alpha_website_large.jpg);
-            background-size: cover;
-            background-position: center ;
-        }
-        #heading{
-            background: rgba(0,0,0,);
-            
-        }
-        #heading div{
-            width: 80%;
-            display: flex;
-
-            justify-content: space-between;
-            margin: 0 auto;
-            
-        }
-        #heading .h1 {
-            font-size: 15px 0px;
-            text-transform: uppercase;
-            color: #fff;
-            padding: 15px;
-
-        }
-        #heading a{
-            color: #fff;
-            text-decoration: none;
-            font-family: sans-serif;
-        }
-    </style>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header id="heading">
-    <div>
-       <h1 class="h1">
-           <a href="#">Netflix</a>
-       </h1>
-       <h1 class="h1 na direita">
-        <a href="#">Netflix</a>
-        </h1>
-    </div>
-   </header>
-   
+    <section class="main-bg section">
+        <div class="main-content">
+            <h1>lorem</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero amet atque, cum deleniti error accusamus laboriosam veniam impedit nisi sunt iste deserunt expedita illo assumenda ab porro rerum cupiditate maxime.</p>
+
+        </div>
+    </section>
 </body>
 </html>
