--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-<body>
-    <section class="main-bg section">
-        <div class="main-content">
-            <h1>lorem</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero amet atque, cum deleniti error accusamus laboriosam veniam impedit nisi sunt iste deserunt expedita illo assumenda ab porro rerum cupiditate maxime.</p>
+<body class="main-bg">
+    <aside class="menu">
+        <section class="main-content menu-content">
+            <h1>
+                <a href="#">LOGO</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Intro</a></li>
+                    <li><a href="#">Top 3</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
+    <section class="section white-bg"></section>
+    <section class="section"></section>
 
-        </div>
-    </section>
 </body>
 </html>
