--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body class="main-bg">
-    <aside class="menu">
-        <section class="main-content menu-content">
+    <aside class="menu white-bg">
+        <div class="main-content menu-content">
             <h1>
                 <a href="#">LOGO</a>
             </h1>
@@ -25,10 +26,25 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
-    <section class="section white-bg"></section>
-    <section class="section"></section>
+    
+    <div class="menu-spacing"></div>
 
+
+    <section class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>The best navegator for developer's and games - Opera GX</h2>
+                <p>The first thing to do is to enable developer mode. You can do it by going to the opera:extensions page and then clicking on Developer Mode.</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/developer.svg" alt="Logo indicando sinais de developer">
+            </div>
+        </div>
+    </section>
+    <section class="white-bg section">
+
+    </section>
 </body>
 </html>
