Criação da segunda parte da landing page, e estilização da mesma

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#">Intro</a></li>
-                    <li><a href="#">Top 3</a></li>
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#top3">Top 3</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact</a></li>
@@ -32,10 +32,10 @@
     <div class="menu-spacing"></div>
 
 
-    <section class="intro main-bg section">
+    <section id="intro" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>The best navegator for developer's and games - Opera GX</h2>
+                <h2>The best navegator for developer's and gamers - Opera GX</h2>
                 <p>The first thing to do is to enable developer mode. You can do it by going to the opera:extensions page and then clicking on Developer Mode.</p>
             </div>
             <div class="intro-img">
@@ -43,8 +43,13 @@
             </div>
         </div>
     </section>
-    <section class="white-bg section">
-
+    <section id="top3" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Top 3 funcionality</h2>
+            <p>O Opera GX oferece uma ferramenta de controle de recursos que permite fixar limites de consumo de banda larga, memória RAM e processamento. A ideia é que, ao jogar, o usuário possa limitar o desempenho do navegador, liberando, assim, mais recursos do sistema para curtir os games.</p>
+            <p>O GX Corner é um recurso que agrega notícias do mundo gamer e permite que você fique por dentro dos lançamentos e novidades da indústria. Se a ferramenta não estiver evidente no seu navegador, você pode fixá-la na barra lateral usando tanto as “Configurações” como o menu “Configuração fácil”, que mencionamos anteriormente.</p>
+            <p>O Opera GX, oferece uma VPN integrada que o usuário pode acionar quando desejar navegar com maior privacidade. Embora seja completamente gratuita, a ferramenta vem desabilitada por padrão e tem limites de banda por mês.</p>
+        </div>
     </section>
 </body>
 </html>
