--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="#">LOGO</a>
+                <a href="#home">LOGO</a>
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#intro">Intro</a></li>
-                    <li><a href="#top3">Top 3</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="#intro">Top 3 </a></li>
+                    <li><a href="#grid-one">Grid One</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -32,8 +31,8 @@
     <div class="menu-spacing"></div>
 
 
-    <section id="intro" class="intro main-bg section">
-        <div class="main-content intro-content">
+    <section id="home" class="intro main-bg section">
+        <div id="home" class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>The best navegator for developer's and gamers - Opera GX</h2>
                 <p>The first thing to do is to enable developer mode. You can do it by going to the opera:extensions page and then clicking on Developer Mode.</p>
@@ -43,13 +42,40 @@
             </div>
         </div>
     </section>
-    <section id="top3" class="white-bg section">
+    <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
             <h2>Top 3 funcionality</h2>
             <p>O Opera GX oferece uma ferramenta de controle de recursos que permite fixar limites de consumo de banda larga, memória RAM e processamento. A ideia é que, ao jogar, o usuário possa limitar o desempenho do navegador, liberando, assim, mais recursos do sistema para curtir os games.</p>
             <p>O GX Corner é um recurso que agrega notícias do mundo gamer e permite que você fique por dentro dos lançamentos e novidades da indústria. Se a ferramenta não estiver evidente no seu navegador, você pode fixá-la na barra lateral usando tanto as “Configurações” como o menu “Configuração fácil”, que mencionamos anteriormente.</p>
             <p>O Opera GX, oferece uma VPN integrada que o usuário pode acionar quando desejar navegar com maior privacidade. Embora seja completamente gratuita, a ferramenta vem desabilitada por padrão e tem limites de banda por mês.</p>
         </div>
+    </section>
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">top 3 jobs</h2>
+            <p class="grid-description">New jobs research</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo porro, maxime laborum incidunt deserunt placeat consequatur aliquam veniam, unde cum dolore! Perspiciatis libero vel tempora aspernatur repellendus odio ullam sit?</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eos a reprehenderit quam consequatur, sit corporis dicta laudantium quasi, est, saepe adipisci eaque voluptates fugiat tempore eligendi modi natus fuga.</p>
+                </article>
+                <article>
+                    <h3>teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque quia quisquam sed aliquid temporibus corporis magni ducimus pariatur nisi deserunt necessitatibus, reprehenderit maiores natus fugiat et ex excepturi nihil.</p>
+                </article>
+             </div>
+        </div>
+    </section>
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+            <h1>teste</h1>
+
+        </div>
+
     </section>
 </body>
 </html>
