Criação da aba Gallery e da grid two da landing page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#intro">Top 3 </a></li>
                     <li><a href="#grid-one">Grid One</a></li>
                     <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#grid-two">Grid Two</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -70,12 +71,50 @@
              </div>
         </div>
     </section>
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
-            <h1>teste</h1>
-
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Galerry</h2>
+            <p class="grid-description">The browser photos</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=1" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=2" alt="random image from unsplash">    
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=3" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=4" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=5" alt="random image from unsplash">    
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=6" alt="random image from unsplash">
+                </div>
+             </div>
         </div>
-
     </section>
-</body>
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Grid two for landing page</h2>
+            <p class="grid-description">Landing page</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo porro, maxime laborum incidunt deserunt placeat consequatur aliquam veniam, unde cum dolore! Perspiciatis libero vel tempora aspernatur repellendus odio ullam sit?</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eos a reprehenderit quam consequatur, sit corporis dicta laudantium quasi, est, saepe adipisci eaque voluptates fugiat tempore eligendi modi natus fuga.</p>
+                </article>
+                <article>
+                    <h3>teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque quia quisquam sed aliquid temporibus corporis magni ducimus pariatur nisi deserunt necessitatibus, reprehenderit maiores natus fugiat et ex excepturi nihil.</p>
+                </article>
+             </div>
+        </div>
+    </section>
 </html>
