Finalização do projeto com a aba contact e um footer com meus contatos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-<body class="main-bg">
+<body>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
@@ -24,7 +24,7 @@
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#grid-two">Grid Two</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -162,5 +162,45 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>The best navegator for developer's and gamers - Opera GX</h2>
+                <p>The first thing to do is to enable developer mode. You can do it by going to the opera:extensions page and then clicking on Developer Mode.</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/contact.svg" alt="Logo indicando sinais de developer">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact Me</legend>
+                    <div class="form-group">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last Name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your last name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Your email">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="message">Email</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+    <footer id="footer" class="footer white-bg">
+        <p><a target="_blank" href="https://www.instagram.com/guiii_lz/">Feito com <span class="heart">♥</span> por Guilherme Luiz </a></p>
+        <p><a target="_blank" href="https://github.com/Guiii-lz">GitHub: Guiii-lz</a></p>
+    </footer>
     
+    </body>
 </html>
