Alteração de frases para melhora do Layout

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
     <section id="contact" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>The best navegator for developer's and gamers - Opera GX</h2>
-                <p>The first thing to do is to enable developer mode. You can do it by going to the opera:extensions page and then clicking on Developer Mode.</p>
+                <h2>The best navegator for developer's - Opera GX</h2>
             </div>
             <div class="intro-img">
                 <img src="assets/img/contact.svg" alt="Logo indicando sinais de developer">
